# Stocks_prediction

./: .gitignore  Data.dvc  LICENSE  README.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config
stocks_prediction/: client_triton.py  convert_and_deploy_triton.py  dataset.py  dataset_moex.py  lightning_regressor.py  mlflow_utils.py  models.py  predict_and_plot.py  train_config.yaml  train_loop.py  transform.py  visualization.py
stocks_prediction/conf/: companies_list.txt  train_config.yaml
stocks_prediction/conf/inference/: onnx_stocklstm.yaml  triton_stocklstm.yaml
stocks_prediction/conf/model/: fedformer.yaml  informer.yaml  stocklstm.yaml  transformer.yaml
stocks_prediction/conf/trainer/: local_gpu.yaml
stocks_prediction/dataset/: data_utils.py  dataset_moex.py  download_moex_data.py
stocks_prediction/inference/: convert_and_deploy_triton.py
stocks_prediction/inference/onxx/: lstm_client.py  lstm_server.py
stocks_prediction/inference/triton/: client_lstm.py
stocks_prediction/layers/: MultiWaveletCorrelation.py  auto_correlation.py  auto_former_enc_dec.py  fourier_correlation.py  multi_wavelet_correlation.py  self_attention_family.py  utils.py
stocks_prediction/models/: Informer.py  __init__.py  fed_former.py  informer.py  lightning_fedformer.py  lightning_informer.py  lightning_transformer.py  stock_lstm.py  time_series_transformer_with_projection.py
stocks_prediction/scripts/: start_triton.sh
tests/: test_model.py
