[project]
name        = "stocks_prediction"
version     = "0.1.0"
description = "MLOps example"
readme      = "README.md"
authors     = [
    { name = "Shepelev Lev", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
"fire>=0.7.0",
"torch>=2.5.0",
"torchvision>=0.20.1",
"pytorch-lightning>=2.4.0",
"pandas>=2.0.0",
"requests",
"hydra-core>=1.3.2",
"omegaconf>=2.3.0",
"apimoex>=1.4.0",
"mlflow>=2.22.0",
"tensorrt>=10.9.0.34",
"onnx==1.18.0",
"scikit-learn (>=1.6.1,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
dvc = "^3.58.0"
mlflow = "^2.22.0"
onnx = ">=1.18"


[tool.flake8]
max-line-length = 90
extend-ignore = ["E203"]

[tool.isort]
src_paths = ["stocks_prediction"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
